source/objects/Bluescape_API_Integration__mdt/Bluescape_API_Integration__mdt.object-meta.xml
<CustomObject>
    <label>Bluescape API Integration</label>
    <pluralLabel>Bluescape API Integrations</pluralLabel>
</CustomObject>