source/objects/Bluescape_API_Integration__mdt/fields/Bearer__c.field-meta.xml
<CustomField>
    <fullName>Bearer__c</fullName>
    <label>Bearer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>