source/objects/Bluescape_API_Integration__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>250</length>
    <type>Text</type>
</CustomField>