source/objects/Bluescape_API_Integration__mdt/fields/Error_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Email__c</fullName>
    <description>Emails will be sent to this email address if something goes wrong</description>
    <label>Error Email</label>
    <type>Email</type>
</CustomField>