source/objects/Bluescape_API_Integration__mdt/fields/Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URI__c</fullName>
    <label>Redirect URI</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>